# UCM

./: sketch.py
Florentino_entregable/: consulas_bicimad.ipynb  enunciado.ipynb
Florentino_entregable/bicimad/: bicimad.py  urlemt.py
Florentino_entregable/test/: test_bicimad.py
entregable_scala/: Documentation.csv  Term.csv  build.sbt
entregable_scala/.bsp/: sbt.json
entregable_scala/src/main/resources/: application.conf
entregable_scala/src/main/scala/org/ntic/entregable/: AirportInfo.scala  FileUtils.scala  Flight.scala  FlightDate.scala  FlightsLoader.scala  FlightsLoaderConfig.scala  Time.scala  leer.sc
entregable_scala/src/test/scala/: FileUtilsTest.scala  FlightDateTest.scala  TimeTest.scala
entregable_scala/src/test/scala/org/ntic/entregable/: FileUtilsTest.scala  FlightDateTest.scala  TimeTest.scala
scala/: scala.scala
trabajo_final_florenitno/: enunciado.ipynb
trabajo_final_florentino/: florentino.ipynb
trabajo_programacion_avanzada_florentino/: bicimad.py  consulas_bicimad.ipynb  enunciado.ipynb  pyproject.toml  test.py  test_bicimad.py  urlemt.py
trabajo_programacion_avanzada_florentino/bicimad/: __init__.py  bicimad.py  urlemt.py
trabajo_programacion_avanzada_florentino/test/: test_bicimad.py  test_urlemt.py
