[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "store"
version = "0.0.1"
requires-python = ">=3.9"
authors = [
	{name = 'Luis Llana', email = 'llana@ucm.es'},
	{name = 'Carmelo Cotón', email = 'ccoton@patata.es'},
	{name = 'Chema Pamundi', email = 'cpamundi@patata.es'}
]

dependencies = [ "requests ~= 2.1",
	"pandas ~= 2.1" ]


[tool.setuptools.packages.find]
exclude = ["tests*"]

