[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "store"
version = "0.0.1"
requires-python = ">=3.9"
authors = [
	{name = 'Florneitno Garcia Martinez', email = 'flgarc01@ucm.es'}
]

dependencies = [ "requests ~= 2.1",
	"pandas ~= 2.1" ]


[tool.setuptools.packages.find]
exclude = ["tests*"]

